[package]
name = "shhcrypt"
version = "1.1.0" 
edition = "2021"
authors = ["CipherStray"]
description = "Vibecoded experimental encryption tool - Under security refactoring"

[dependencies]
crossterm = "0.27"
aes-gcm = "0.10.3"
argon2 = "0.5"
rand = "0.8"
tar = "0.4"
flate2 = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
chrono = "0.4"

[profile.release]
opt-level = "z"  
lto = true        
codegen-units = 1 
panic = "abort"   
strip = true   
